Aufgabe reparameterization trick
Aufgabe zu reparameterization trick hinzugefügt

--- a/Code/SAC2019 _ohneLoesung.ipynb
+++ b/Code/SAC2019 _ohneLoesung.ipynb
@@ -6,11 +6,15 @@
    "source": [
     "# Aufgaben:\n",
     "\n",
+    "Die Stellen, an denen Aufgaben gelöst werden sollen, sind im Code mit Kommentaren versehen.\n",
+    "\n",
     "Beim Ausführen nicht vergessen die run_id zu verändern, damit man die Ergebnisse vergleichen kann.\n",
     "\n",
-    "1) Verändere den Temperatur Wert (alpha) und schaue, wie sich die Ergebnisse verändern. \n",
+    "1) Verändere die sample()-Methode des policy networks so, dass der reparameteriazation trick angewandt wird. Dazu muss das sampeln aus der Normalerteilung mit einer anderen Methode erfolgen.\n",
     "\n",
-    "2) Erweitere den Agenten um einen lerndenden Temperture Wert. Implementiere dazu unter Aufgabe 2 für alpha Wert gradient descend. Im Agent ist dazu mit traget_entropie, log_alpha und alpha_optim mögliche Hilfen gegeben. "
+    "2) Verändere den Temperature Wert (alpha) und schaue, wie sich die Ergebnisse verändern. \n",
+    "\n",
+    "3) Erweitere den Agenten um einen lerndenden Temperture Wert. Implementiere dazu unter Aufgabe 3 für alpha Wert gradient descend. Im Agent sind dazu mit traget_entropie, log_alpha und alpha_optim mögliche Hilfen gegeben. "
    ]
   },
   {
@@ -189,8 +193,9 @@
     "        mean, log_std = self.forward(state)\n",
     "        std = log_std.exp()\n",
     "\n",
+    "        # Aufgabe 1\n",
     "        normal = Normal(mean, std)\n",
-    "        z = normal.rsample()\n",
+    "        z = normal.sample()\n",
     "        action = torch.tanh(z)\n",
     "\n",
     "        log_pi = normal.log_prob(z) - torch.log(1 - action.pow(2) + epsilon)\n",
@@ -323,9 +328,9 @@
     "            for target_param, param in zip(self.target_q_net2.parameters(), self.q_net2.parameters()):\n",
     "                target_param.data.copy_(self.tau * param + (1 - self.tau) * target_param)\n",
     "\n",
-    "        # Aufgabe 2\n",
+    "        # Aufgabe 3\n",
     "\n",
-    "        #Ende Aufgabe 2\n",
+    "        #Ende Aufgabe 3\n",
     "        self.update_step += 1"
    ]
   },
@@ -394,7 +399,7 @@
     "# SAC Params\n",
     "gamma = 0.99\n",
     "tau = 0.01\n",
-    "#Aufgabe 1\n",
+    "# Aufgabe 1\n",
     "alpha = 0.8\n",
     "a_lr = 3e-4\n",
     "q_lr = 3e-4\n",
