--- a/beamer/Part_1.tex
+++ b/beamer/Part_1.tex
@@ -1,4 +1,9 @@
 \section{Soft Actor-Critic Grundlagen}
+\begin{frame}
+    \frametitle{Inhaltsverzeichnis}
+    \tableofcontents[currentsection]
+\end{frame}
+
 \subsection{Grundlegender Aufbau}
 \begin{frame}{Einordnung}
 	\begin{itemize}
