--- a/beamer/Part_3.tex
+++ b/beamer/Part_3.tex
@@ -1,4 +1,8 @@
 \section{Ergebnisse}
+\begin{frame}
+    \frametitle{Inhaltsverzeichnis}
+    \tableofcontents[currentsection]
+\end{frame}
 
 \begin{frame}{Ziel der Experimente}
         \begin{itemize}
