--- a/beamer/Bibliography.bib
+++ b/beamer/Bibliography.bib
@@ -66,3 +66,9 @@ edition = {1st}
   year         = {2018},
   url          = {https://www.youtube.com/watch?v=2lf-3tgWiUc}   
 }
+
+@book{actorcritic,
+	author       = {Richard S. Sutton and Andrew G. Barto },
+	title        = {Reinforcement Learning: An Introduction},
+	year         = {1998}, 
+}
