--- a/beamer/SACbeamer.tex
+++ b/beamer/SACbeamer.tex
@@ -39,6 +39,7 @@
 \section{Literaturverzeichnis}
 \begin{frame}
 {\scriptsize
+\nocite{actorcritic}
 \nocite{SAC19}
 \nocite{SAC18}
 \nocite{autoencoding}
