--- a/beamer/Part_3.tex
+++ b/beamer/Part_3.tex
@@ -73,6 +73,31 @@
     \cite{SAC19}
 \end{frame}
 
+\begin{frame}
+	\frametitle{Deterministisch vs Stochastisch }
+	\includegraphics[width=0.9\textwidth, height=0.9\textheight]{figures/seeds-humanoid-rllab.pdf}\hfill
+	\cite{SAC18}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Deterministische Evaluation }
+	\includegraphics[width=0.5\textwidth, height=0.5\textheight]{figures/evaluation-ant.pdf}\hfill
+	\includegraphics[width=0.5\textwidth, height=0.5\textheight]{figures/evaluation-half-cheetah.pdf}\hfill
+	\cite{SAC18}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Reward Scale}
+	\includegraphics[width=0.9\textwidth, height=0.9\textheight]{figures/reward-scale-ant.pdf}\hfill
+	\cite{SAC18}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Target Network Update}
+	\includegraphics[width=0.9\textwidth, height=0.9\textheight]{figures/soft-target-ant.pdf}\hfill
+	\cite{SAC18}
+\end{frame}
+
 %\begin{frame}
 %    \frametitle{Ergebnisse}
 %    \includegraphics[width=0.8\textwidth]{figures/seeds-humanoid.pdf}
