--- a/handout/SAC_Handout.tex
+++ b/handout/SAC_Handout.tex
@@ -32,7 +32,7 @@
 \section{Actor-Critic Ansatz}
 Der Actor nimmt die Aktionsauswahl für einen bestimmten Zustand vor, der Critic lernt die Q-function und ''kritisiert'' die Entscheidungen des Actors.
 
-\begin{center}\includegraphics[width=40ex]{figures/A-regular-actor-critic-model-TD-temporal-difference.png}\end{center}
+\begin{center}\includegraphics[width=40ex]{figures/figtmp34.png}\end{center}
 
 \section{Entropie Maximierung}
 Während standard RL Algorithmen nur die Belohnung maximieren, maximiert Soft Actor-Critic zusätzlich die Entropie der policy. Die Entropie ist höher, je ungenauer festzustellen ist, welche Aktion die optimale ist. Dies regt somit mehr zum Erforschen der Umgebung an. Die Entropie-Maximierung wird mit dem temperature-Wert $\alpha$ reguliert.
