Tippfehler im Code
Tippfehler im Code

--- a/Code/SAC2019 _ohneLoesung.ipynb
+++ b/Code/SAC2019 _ohneLoesung.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Beim Ausführen nicht vergessen die run_id zu verändern, damit man die Ergebnisse vergleichen kann.\n",
     "\n",
-    "1) Verändere die sample()-Methode des policy networks so, dass der reparameteriazation trick angewandt wird. Dazu muss das sampeln aus der Normalerteilung mit einer anderen Methode erfolgen.\n",
+    "1) Verändere die sample()-Methode des policy networks so, dass der reparameteriazation trick angewandt wird. Dazu muss das sampeln aus der Normalverteilung mit einer anderen Methode erfolgen.\n",
     "\n",
     "2) Verändere den Temperature Wert (alpha) und schaue, wie sich die Ergebnisse verändern. \n",
     "\n",
@@ -254,7 +254,7 @@
     "        self.q2_optimizer = optim.Adam(self.q_net2.parameters(), lr=q_lr)\n",
     "        self.policy_optimizer = optim.Adam(self.policy_net.parameters(), lr=policy_lr)\n",
     "\n",
-    "        # entropy temperature. Diese Objekte können für Aufgabe 2 verwendet werden.\n",
+    "        # entropy temperature. Diese Objekte können für Aufgabe 3 verwendet werden.\n",
     "        self.alpha = alpha\n",
     "        self.target_entropy = -torch.prod(torch.Tensor(self.env.action_space.shape).to(self.device)).item()\n",
     "        self.log_alpha = torch.zeros(1, requires_grad=True, device=self.device)\n",
