--- a/Code/SAC2019.ipynb
+++ b/Code/SAC2019.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Beim Ausführen nicht vergessen die run_id zu verändern, damit man die Ergebnisse vergleichen kann.\n",
     "\n",
-    "1) Verändere die sample()-Methode des policy networks so, dass der reparameteriazation trick angewandt wird. Dazu muss das sampeln aus der Normalerteilung mit einer anderen Methode erfolgen.\n",
+    "1) Verändere die sample()-Methode des policy networks so, dass der reparameteriazation trick angewandt wird. Dazu muss das sampeln aus der Normalverteilung mit einer anderen Methode erfolgen.\n",
     "\n",
     "2) Verändere den Temperature Wert (alpha) und schaue, wie sich die Ergebnisse verändern. \n",
     "\n",
