--- a/beamer/Part_1.tex
+++ b/beamer/Part_1.tex
@@ -62,6 +62,7 @@
 		\begin{equation}
 			\sum_{t=0}^T \mathbb{E}_{(s_t,a_t)\sim\rho_\pi}[{\mathnormal{r}(s_t,a_t)} + \alpha \mathcal{H}(\pi(\cdot|s_t))] \notag
 		\end{equation}
+	\item Parameter $\alpha$ kann fest gesetzt werden oder mittels gradient descent angepasst werden
 	\end{itemize} 
 \end{frame}
 
