--- a/beamer/Part_3.tex
+++ b/beamer/Part_3.tex
@@ -111,9 +111,11 @@
             \begin{itemize}
                 \item Off policy Algorithmus
                 \item Entropiemaximierung verbessert Stabilität
-                \item Besser als state-of-the-art Algorithmen 
-                \item Gradientenbasiertes Temperatur Tuning
-            \end{itemize} 
+                \item temperature Wert wird gelernt statt fest zu setzen
+            \end{itemize}
+                \item Experimente in verschiedenen Umgebungen
+                \item Besser als state-of-the-art Algorithmen  
+                \item Stabiler als state-of-the-art Algorithmen  
         \end{itemize}
 \end{frame}
 
